2008-01-18  Torsten Rahn  <rahn@kde.org>

    * src/lib/SunLocator.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:

    - Another awesome patch by our "weather man" 
    David Roberts. This one adds: 
    - the (internal) option to let the citylights 
    map show up on the night side of the satellite view.

    - clouds (only show up if you create cloud tiles
    in the maps/earth/clouds directory which doesn't happen 
    automatically yet. But it works well already.

2008-01-18  Torsten Rahn  <rahn@kde.org>

    * src/lib/SunControlWidget.ui:

    - Adding Sun control widget for David Roberts.

2008-01-18  Torsten Rahn  <rahn@kde.org>

    * src/lib/TextureTile.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/SunLocator.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/TextureTile.cpp

    - More patches by David Roberts to fix and speed-up
    the sun shading. 
    Only issues left: 
    - There shouldn't be any timers in MarbleWidget
    - TileLoader shouldn't be aware of things like
    "sunshading".

2008-01-18  Torsten Rahn  <rahn@kde.org>

    * src/lib/TextureTile.{cpp,h}:
    - Visualize Tile loading by displaying filename tags
      on the globe.
    - Ŕight now you need to set

      bool tileIdVisible = true;

    in TextureTile.cpp, line 174 to see the effect. Really cool
    and makes tile loading pretty clear if you haven't understood
    it yet.

2008-01-17  Inge Wallin  <inge@lysator.liu.se>

	Cleaning
	* src/lib/MarbleModel.cpp ():Follow coding standards
	* src/lib/TileCreator.cpp ():Follow coding standards
	
2008-01-17  Torsten Rahn  <rahn@kde.org>

    * src/QtMainWindow.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/SunLocator.{cpp,h}:
    * src/lib/ExtDateTime.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/CMakeLists.txt:
    * src/ControlView.h:

    - "Let The Sunshine In"
